<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Busca Majin Boo</string>
    <string name="action_settings">Settings</string>
    <string name="comenzar">Start</string>
    <string name="puntuacion">High Scores</string>
    <string name="acerca">About</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="title_activity_about">About</string>
    <string name="principiante">Beginner</string>
    <string name="intermedio">Intermediate</string>
    <string name="avanzado">Advanced</string>
    <string name="usuario">Custom</string>
    <string name="title_activity_tablero">Busca Majin Boo</string>
    <string name="title_activity_custom">Custom</string>
    <string name="alto_custom">Alto (9-24)</string>
    <string name="ancho_custom">Ancho(9-30)</string>
    <string name="minas_custom">Minas(10-668)</string>
    <string name="aceptar_custom">Aceptar</string>
    <string name="title_activity_custom_tablero">Custom_tablero</string>
    <string name="default_name">anonymous</string>
    <string name="default_text">anonymous 999</string>
    <string name="label_facil">facil</string>
    <string name="label_medio">medio</string>
    <string name="label_dificil">dificil</string>
    <string name="button_text_borrarTiempos">Borrar Tiempos</string>
    

</resources>
