<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomenu"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".NewGame" >

         <Button
             android:id="@+id/principiante"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/boton"
             android:text="@string/principiante"
             android:textColor="@color/naranja"
             android:textSize="50sp"
             android:typeface="normal"
             android:textStyle="bold"
             android:layout_margin="50dp"  />
        
        <Button
            android:id="@+id/intermedio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intermedio"
            android:textColor="@color/naranja"
            android:textSize="50sp" 
            android:background="@drawable/boton"
            android:typeface="normal"
            android:textStyle="bold"
            android:layout_margin="50dp"  />  
   

	    <Button
            android:id="@+id/avanzado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/avanzado"
            android:textColor="@color/naranja"
            android:textSize="50sp" 
            android:background="@drawable/boton"
            android:typeface="normal"
            android:textStyle="bold"
            android:layout_margin="50dp"  />

        <Button
            android:id="@+id/usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@color/naranja"
            android:textSize="50sp" 
            android:background="@drawable/boton"
            android:typeface="normal"
            android:textStyle="bold"
            android:layout_margin="50dp"  />
	

 </LinearLayout>