<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomenu" 
    android:orientation="vertical"
    android:gravity="center_vertical"
    
    tools:context=".MenuPrincipal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="601dp"
        android:layout_height="350dp"
        android:src="@drawable/esfera" />

    <Button
        android:id="@+id/iniciarPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:background="@drawable/boton"
        android:text="@string/comenzar"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/puntuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:background="@drawable/boton"
        android:text="@string/puntuacion"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/acercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:background="@drawable/boton"
        android:text="@string/acerca"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:typeface="serif" />

</LinearLayout>